fixed main being centered when page is too short

--- a/src/layouts/layout.module.css
+++ b/src/layouts/layout.module.css
@@ -5,8 +5,8 @@
 
 .contentGrid {
   display: grid;
-  grid-template-rows: auto 1fr auto;
   grid-template-columns: 1fr min(var(--max-content-width), 100%) 1fr;
+  grid-template-rows: auto 1fr auto;
   height: 100%;
   width: 100%;
   margin: auto;
@@ -17,6 +17,7 @@
   width: 100%;
   display: grid;
   grid-template-columns: 1fr min(var(--max-content-width), 100%) 1fr;
+  margin-bottom: auto;
 }
 
 .main > * {
